--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
-RABBITMQ_URL=amqps://bjnuffmq:gj-YQIiEXyfxQxjsZtiYDKeXIT8ppUq7@jaragua-01.lmq.cloudamqp.com
-QUEUE_NAME=fila.notificacao.entrada.naju
+RABBITMQ_URL=amqps://bjnuffmq:gj-YQIiEXyfxQxjsZtiYDKeXIT8ppUq7@jaragua-01.lmq.cloudamqp.com/bjnuffmq
+QUEUE_NAME=fila.notificacao.entrada.Naju
