--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "start:proxy": "ng serve --proxy-config proxy.conf.json -o",
+  "build": "ng build",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,7 +34,8 @@
     "@angular/ssr": "^20.3.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.1",
@@ -42,6 +44,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
